--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <link rel="stylesheet" type="text/css" href="css/my-styles.css">
 </head>
 <body>
-
+<div class="width color-top">
+    <nav class="container">
+        <div class="row">
+            <ul>
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">Продукция</a></li>
+                <li><a href="#">Галерея</a></li>
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Документы</a></li>
+                <li><a href="#">Технологии</a></li>
+                <li><a href="#">Калькулятор</a></li>
+                <li><a href="#">Контакты</a></li>
+                <li><a href="#">События</a></li>
+            </ul>
+        </div>
+    </nav>
+</div>
 </body>
 </html>
