--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <div class="width color-top">
     <nav class="container">
         <div class="row">
-            <ul>
-                <li><a href="#">Главная</a></li>
-                <li><a href="#">Продукция</a></li>
-                <li><a href="#">Галерея</a></li>
-                <li><a href="#">О нас</a></li>
-                <li><a href="#">Документы</a></li>
-                <li><a href="#">Технологии</a></li>
-                <li><a href="#">Калькулятор</a></li>
-                <li><a href="#">Контакты</a></li>
-                <li><a href="#">События</a></li>
+            <ul class="menu col-12">
+                <li><a href="#">Главная</a><div class="triangle"></div></li>
+                <li><a href="#">Продукция</a><div class="triangle"></div></li>
+                <li><a href="#">Галерея</a><div class="triangle"></div></li>
+                <li><a href="#">О нас</a><div class="triangle"></div></li>
+                <li><a href="#">Документы</a><div class="triangle"></div></li>
+                <li><a href="#">Технологии</a><div class="triangle"></div></li>
+                <li><a href="#">Калькулятор</a><div class="triangle"></div></li>
+                <li><a href="#">Контакты</a><div class="triangle"></div></li>
+                <li><a href="#">События</a><div class="triangle"></div></li>
             </ul>
         </div>
     </nav>
