--- a/index.html
+++ b/index.html
@@ -2,33 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>ALVI</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap-reboot.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/my-styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.7.0/d3.min.js"></script>
 </head>
 <body>
-<div class="width color-top">
-    <nav class="container">
-        <div class="row">
-            <ul class="menu col-12">
-                <li><a href="#">Главная</a><div class="triangle"></div></li>
-                <li><a href="#">Продукция</a><div class="triangle"></div></li>
-                <li><a href="#">Галерея</a><div class="triangle"></div></li>
-                <li><a href="#">О нас</a><div class="triangle"></div></li>
-                <li><a href="#">Документы</a><div class="triangle"></div></li>
-                <li><a href="#">Технологии</a><div class="triangle"></div></li>
-                <li><a href="#">Калькулятор</a><div class="triangle"></div></li>
-                <li><a href="#">Контакты</a><div class="triangle"></div></li>
-                <li><a href="#">События</a><div class="triangle"></div></li>
-            </ul>
+<div class="main-background">
+    <nav class="menu-background">
+        <div class="container">
+            <div class="row no-gutters mu-row">
+                <div class="burger">
+                    <div class="burger-line-1"></div>
+                    <div class="burger-line-2"></div>
+                    <div class="burger-line-3"></div>
+                </div>
+                <ul class="menu">
+                    <li><a href="#">Главная</a><div class="triangle"></div></li>
+                    <li><a href="#">Продукция</a><div class="triangle"></div></li>
+                    <li><a href="#">Галерея</a><div class="triangle"></div></li>
+                    <li><a href="#">О нас</a><div class="triangle"></div></li>
+                    <li><a href="#">Документы</a><div class="triangle"></div></li>
+                    <li><a href="#">Технологии</a><div class="triangle"></div></li>
+                    <li><a href="#">Калькулятор</a><div class="triangle"></div></li>
+                    <li><a href="#">Контакты</a><div class="triangle"></div></li>
+                    <li><a href="#">События</a><div class="triangle"></div></li>
+                </ul>
+            </div>
         </div>
     </nav>
 </div>
-
-        <div>Lorem ipsum dolor sit amet.</div>
-
 </body>
 </html>
