--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/my-styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.7.0/d3.min.js"></script>
+    <script>
+
+    </script>
 </head>
 <body>
 <div class="main-background">
@@ -35,6 +38,11 @@
             </div>
         </div>
     </nav>
+    <header class="container">
+        <div class="row">
+
+        </div>
+    </header>
 </div>
 </body>
 </html>
