--- a/index.html
+++ b/index.html
@@ -10,16 +10,13 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/my-styles.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.7.0/d3.min.js"></script>
-    <script>
-
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
 <div class="main-background">
     <nav class="menu-background">
         <div class="container">
-            <div class="row no-gutters mu-row">
+            <div class="row no-gutters my-row">
                 <div class="burger">
                     <div class="burger-line-1"></div>
                     <div class="burger-line-2"></div>
@@ -41,9 +38,15 @@
     </nav>
     <header class="container">
         <div class="row">
-ff
+            ff
         </div>
     </header>
 </div>
+
+<script>
+    $('.burger').on('click', function () {
+        $(this).next().slideToggle(500);
+    });
+</script>
 </body>
 </html>
