--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="main-background">
     <nav class="menu-background">
         <div class="container">
-            <div class="row no-gutters my-row">
+            <div class="row no-gutters my-row-menu">
                 <div class="burger">
                     <div class="burger-line-1"></div>
                     <div class="burger-line-2"></div>
@@ -38,11 +38,10 @@
     </nav>
     <header class="container">
         <div class="row">
-            ff
+
         </div>
     </header>
 </div>
-
 <script>
     $('.burger').on('click', function () {
         $(this).next().slideToggle(500);
