--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <!--suppress ALL -->
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>ALVI</title>
+    <link rel="shortcut icon" href="images/logofp.png" type="image/png">
+    <link rel="shortcut icon" href="images/logofg.gif" type="image/gif">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-reboot.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
@@ -37,8 +39,13 @@
         </div>
     </nav>
     <header class="container">
-        <div class="row">
-
+        <div class="row no-gutters">
+            <div class="logo"><img src="images/logo.png" alt="logo"></div>
+            <div>
+                <form action="#" method="#">
+                    <input type="button" value="Cкачат прайс-лист">
+                </form>
+            </div>
         </div>
     </header>
 </div>
