--- a/index.html
+++ b/index.html
@@ -39,15 +39,25 @@
         </div>
     </nav>
     <header class="container">
-        <div class="row no-gutters">
-            <div class="logo"><img src="images/logo.png" alt="logo"></div>
-            <div>
+        <div class="row no-gutters my-row-header">
+            <div class="logo"><a href="#"><img src="images/logo.png" alt="logo"></a></div>
+            <div class="button">
                 <form action="#" method="#">
-                    <input type="button" value="Cкачат прайс-лист">
+                    <input type="button">
                 </form>
             </div>
         </div>
     </header>
+    <main class="container background-all-blocks">
+        <div class="row no-gutters my-row-main">
+            <div>
+                <article>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut</p>
+                    <div><a href="#">читать далее...</a></div>
+                </article>
+            </div>
+        </div>
+    </main>
 </div>
 <script>
     $('.burger').on('click', function () {
